[gd_scene load_steps=3 format=3 uid="uid://b2v7qlivdkxjy"]

[ext_resource type="Theme" uid="uid://b7cp6hc23xm1k" path="res://content/themes/dialog_theme.tres" id="1_bh58h"]
[ext_resource type="Script" path="res://content/dialogs/input_dialog.gd" id="2_bdvne"]

[node name="InputDialog" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_bh58h")
script = ExtResource("2_bdvne")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.5
offset_top = -187.5
offset_right = 132.5
offset_bottom = -94.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PanelInner"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="CaptionLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/CenterContainer"]
layout_mode = 2
theme_type_variation = &"CaptionLabel"
text = "game_winInput_caption"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PanelInner"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/CenterContainer"]
layout_mode = 2
text = "game_winInput_text"

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PanelInner"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/PanelContainer3/CenterContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1
max_length = 12
expand_to_text_length = true
context_menu_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
flat = true

[connection signal="ready" from="." to="." method="_on_ready"]
